# crownstone-sdk

./: ALEXA.md  CMakeLists.txt  GUIDE_STONE.md  HUB.md  README.md  REST_API.md
asset-tracking/: README.md
bootstrap/: CMakeLists.txt
firmware/: README.md
hub/: CUSTOM_PORTS.md  ENDPOINTS.md  README.md
hub/api/: REST.md
hub/api/controllers/: AssetController.md  AssetFilterController.md  EnergyController.md  HubController.md  MeshController.md  SwitchController.md  WebhookController.md
hub/examples/: example.html  example.js
hub/explanation/: AssetTracking.md  GettingStarted.md
hub/explanation/examples/AssetTracking/: README.md  config.js  example.js
hub/explanation/examples/AssetTracking/util/: assetUtil.js  restUtil.js
scripts/: .gitconfig  install.sh
smartphones/: README.md
wearables/: README.md
